# FatRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: shader.slang
src/: TriangleApp.cpp  TriangleApp.h  TriangleApp.hpp  macros.h  main.cpp
